apply plugin: 'com.android.feature'

android {
    compileSdkVersion 26
    buildToolsVersion '26.0.1'

    defaultConfig {
        minSdkVersion 21

        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
    }

    flavorDimensions "packaging"
    productFlavors { full.dimension "packaging" }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    lintOptions {
        check 'NewApi'
        abortOnError false
        xmlReport false
        textReport true
        textOutput "stdout"
    }
}

dependencies {
    implementation project(':shared')
    implementation 'com.android.support:support-compat:26.1.0'      // ShortcutShuttle
    implementation 'com.google.firebase:firebase-perf:11.2.2'

    androidTestImplementation('com.android.support.test:runner:0.5') { exclude group: 'com.android.support', module: 'support-annotations' }
}
